// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the sabre and Naizagai on the mounted sword family keep their pre-SF36 trace > naizagai builds the same viewmodel and plays the same scripted twenty seconds 1`] = `
{
  "built": {
    "children": 4,
    "meshes": [
      {
        "geo": -292.634850412,
        "mat": [
          {
            "blending": 1,
            "color": null,
            "depthWrite": true,
            "emissive": null,
            "name": "nalati-viewmodel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshLambertMaterial",
          },
        ],
        "order": 1000,
        "verts": 5010,
      },
      {
        "geo": 649.106341233,
        "mat": [
          {
            "blending": 1,
            "color": "cee5ff",
            "depthWrite": true,
            "emissive": [
              "597cc4",
              1,
            ],
            "name": "nalati-steel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshPhysicalMaterial",
          },
        ],
        "order": 1000,
        "verts": 2550,
      },
      {
        "geo": -8493.930694921,
        "mat": [
          {
            "blending": 1,
            "color": null,
            "depthWrite": true,
            "emissive": null,
            "name": "nalati-viewmodel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshLambertMaterial",
          },
        ],
        "order": 1000,
        "verts": 16623,
      },
      {
        "geo": 0,
        "mat": [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        "order": 1001,
        "verts": 342,
      },
      {
        "geo": 0,
        "mat": [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        "order": 1002,
        "verts": 4,
      },
    ],
    "row": [
      "weapon.naizagai",
      "Naizagai",
    ],
  },
  "carried": [
    {
      "speed": 9,
      "yaw": 0.2,
    },
    0,
    0,
    1.3,
    true,
  ],
  "eventCount": 138,
  "events": "8ec3b7ce",
  "last": {
    "chain": 0,
    "chainLeft": 0,
    "charging": false,
    "damage": 24,
    "fov": 93.93919417,
    "heavy": false,
    "hp": [
      [
        1,
        234,
      ],
      [
        0,
        -9,
      ],
      [
        1,
        90,
      ],
    ],
    "i": 1199,
    "model": [
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      1,
      1,
    ],
    "mounted": false,
    "parts": [
      [
        "Group",
        1,
        0.054461352,
        -0.79075259,
        -0.622176001,
        -0.723551086,
        0.096940209,
        0.213782091,
        0.649132991,
        0.71488,
        0.71488,
        0,
        [
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": null,
                "depthWrite": true,
                "emissive": null,
                "name": "nalati-viewmodel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshLambertMaterial",
              },
            ],
          ],
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": "cee5ff",
                "depthWrite": true,
                "emissive": [
                  "597cc4",
                  1,
                ],
                "name": "nalati-steel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshPhysicalMaterial",
              },
            ],
          ],
        ],
      ],
      [
        "Group",
        1,
        0.054461352,
        -0.79075259,
        -0.622176001,
        -0.533199705,
        0.097301849,
        0.171431519,
        0.822703871,
        0.71488,
        0.71488,
        0,
        [
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": null,
                "depthWrite": true,
                "emissive": null,
                "name": "nalati-viewmodel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshLambertMaterial",
              },
            ],
          ],
        ],
      ],
      [
        "Mesh",
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1001,
        [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        -1716.145921201,
      ],
      [
        "Mesh",
        0,
        -0.602139451,
        -0.70592855,
        -0.925449226,
        0,
        0,
        0,
        1,
        1,
        1,
        1002,
        [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
      ],
    ],
    "scene": [
      [
        "Mesh",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        0,
        [
          {
            "blending": 1,
            "color": "ffffff",
            "depthWrite": true,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": false,
            "type": "MeshBasicMaterial",
          },
        ],
      ],
      [
        "Points",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1001,
        -97.916728735,
      ],
    ],
    "swing": null,
    "viewmodel": [
      [
        "Mesh",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        999,
        [
          {
            "blending": 1,
            "color": "ffffff",
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "MeshBasicMaterial",
          },
        ],
      ],
    ],
  },
  "windows": [
    "9d8f1e74",
    "5880b3df",
    "86888021",
    "8c77a7a6",
    "166efe71",
    "45d43276",
    "380f31a5",
    "ec525b1b",
    "5389f372",
    "757703ea",
    "0ffabe24",
    "6ae6f55b",
    "60f703a1",
    "0d74ddea",
    "42e004d8",
    "e8d04466",
    "12d7434d",
    "112ac0d2",
    "d5ca6576",
    "7fe333f3",
    "44c0af46",
    "e8ef35a5",
    "6acbb769",
    "33a0456f",
    "0d61b0a7",
    "adfcd67b",
    "068f62b8",
    "d2f912b5",
    "887d841a",
    "7b98d8ec",
    "feead280",
    "078d5b9a",
    "36563458",
    "95855d12",
    "3abed943",
    "ba2281c8",
    "ffa953be",
    "8b2b5301",
    "ae105448",
    "eac366e1",
  ],
}
`;

exports[`the sabre and Naizagai on the mounted sword family keep their pre-SF36 trace > sabre builds the same viewmodel and plays the same scripted twenty seconds 1`] = `
{
  "built": {
    "children": 4,
    "meshes": [
      {
        "geo": -292.634850412,
        "mat": [
          {
            "blending": 1,
            "color": null,
            "depthWrite": true,
            "emissive": null,
            "name": "nalati-viewmodel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshLambertMaterial",
          },
        ],
        "order": 1000,
        "verts": 5010,
      },
      {
        "geo": 649.106341233,
        "mat": [
          {
            "blending": 1,
            "color": "ffffff",
            "depthWrite": true,
            "emissive": [
              "000000",
              1,
            ],
            "name": "nalati-steel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshPhysicalMaterial",
          },
        ],
        "order": 1000,
        "verts": 2550,
      },
      {
        "geo": -8493.930694921,
        "mat": [
          {
            "blending": 1,
            "color": null,
            "depthWrite": true,
            "emissive": null,
            "name": "nalati-viewmodel",
            "opacity": 1,
            "transparent": true,
            "type": "MeshLambertMaterial",
          },
        ],
        "order": 1000,
        "verts": 16623,
      },
      {
        "geo": 0,
        "mat": [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        "order": 1001,
        "verts": 342,
      },
      {
        "geo": 0,
        "mat": [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        "order": 1002,
        "verts": 4,
      },
    ],
    "row": [
      "weapon.sabre",
      "Sabre",
    ],
  },
  "carried": [
    {
      "speed": 9,
      "yaw": 0.2,
    },
    0,
    0,
    1.3,
    true,
  ],
  "eventCount": 156,
  "events": "c67bec15",
  "last": {
    "chain": 0,
    "chainLeft": 0,
    "charging": false,
    "damage": 24,
    "fov": 93.93919417,
    "heavy": false,
    "hp": [
      [
        1,
        234,
      ],
      [
        1,
        43,
      ],
      [
        1,
        90,
      ],
    ],
    "i": 1199,
    "model": [
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      1,
      1,
    ],
    "mounted": false,
    "parts": [
      [
        "Group",
        1,
        0.054461352,
        -0.79075259,
        -0.622176001,
        -0.723551086,
        0.096940209,
        0.213782091,
        0.649132991,
        0.71488,
        0.71488,
        0,
        [
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": null,
                "depthWrite": true,
                "emissive": null,
                "name": "nalati-viewmodel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshLambertMaterial",
              },
            ],
          ],
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": "ffffff",
                "depthWrite": true,
                "emissive": [
                  "000000",
                  1,
                ],
                "name": "nalati-steel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshPhysicalMaterial",
              },
            ],
          ],
        ],
      ],
      [
        "Group",
        1,
        0.054461352,
        -0.79075259,
        -0.622176001,
        -0.533199705,
        0.097301849,
        0.171431519,
        0.822703871,
        0.71488,
        0.71488,
        0,
        [
          [
            "Mesh",
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            1,
            1,
            1000,
            [
              {
                "blending": 1,
                "color": null,
                "depthWrite": true,
                "emissive": null,
                "name": "nalati-viewmodel",
                "opacity": 1,
                "transparent": true,
                "type": "MeshLambertMaterial",
              },
            ],
          ],
        ],
      ],
      [
        "Mesh",
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1001,
        [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
        -1770.316233158,
      ],
      [
        "Mesh",
        0,
        -0.602139451,
        -0.70592855,
        -0.925449226,
        0,
        0,
        0,
        1,
        1,
        1,
        1002,
        [
          {
            "blending": 2,
            "color": null,
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "ShaderMaterial",
          },
        ],
      ],
    ],
    "scene": [
      [
        "Mesh",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        0,
        [
          {
            "blending": 1,
            "color": "ffffff",
            "depthWrite": true,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": false,
            "type": "MeshBasicMaterial",
          },
        ],
      ],
      [
        "Points",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1001,
        -130.288899243,
      ],
    ],
    "swing": null,
    "viewmodel": [
      [
        "Mesh",
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        999,
        [
          {
            "blending": 1,
            "color": "ffffff",
            "depthWrite": false,
            "emissive": null,
            "name": "",
            "opacity": 1,
            "transparent": true,
            "type": "MeshBasicMaterial",
          },
        ],
      ],
    ],
  },
  "windows": [
    "67524e0a",
    "9b4bf555",
    "10d8956d",
    "d4d948bc",
    "8dba1205",
    "2d95497a",
    "549bef91",
    "e80646ce",
    "9750b5de",
    "59bd2148",
    "5df8c264",
    "1c307b4d",
    "0ac98729",
    "cb98e916",
    "1a6cb87c",
    "1a1e5f89",
    "262c70ea",
    "5b29cb28",
    "70bd6882",
    "f8606795",
    "aa94e46e",
    "c5b328b9",
    "fa8f9aa5",
    "61fc33dc",
    "dce77f63",
    "c1089b31",
    "0b2b8da8",
    "b572682f",
    "17eea706",
    "d2ef1639",
    "4681d9b6",
    "b2c8f65c",
    "f7dc4537",
    "e2ec91ad",
    "931cedab",
    "b23d522e",
    "5eaa30bf",
    "f36ccb6b",
    "0ddf4cca",
    "c4bafd6b",
  ],
}
`;
